- Complete basic project

--- a/src/index.html
+++ b/src/index.html
@@ -21,14 +21,16 @@
     <header id="header">
       <div class="container">
         <div class="header_logo">
-          <img src="./assets/icons/logo.svg" alt="" class="logo" />
+          <a href="index.html">
+            <img src="./assets/icons/logo.svg" alt="" class="logo" />
+          </a>
         </div>
         <div class="header_navbar">
-          <a href="#">HOME</a>
-          <a href="#">MOVIE</a>
-          <a href="#">TV SHOW</a>
-          <a href="#">WEB SERIES</a>
-          <a href="#">PRICING</a>
+          <a href="index.html">HOME</a>
+          <a href="movie.html">MOVIE</a>
+          <a href="TVShow.html">TV SHOW</a>
+          <a href="WebSeries.html">WEB SERIES</a>
+          <a href="prices.html">PRICING</a>
         </div>
         <div class="header_actions">
           <div class="header_actions_list">
@@ -267,11 +269,11 @@
         />
       </div>
       <div class="header_navbar_mobile_content">
-        <a href="#">HOME</a>
-        <a href="#">MOVIE</a>
-        <a href="#">TV SHOW</a>
-        <a href="#">WEB SERIES</a>
-        <a href="#">PRICING</a>
+        <a href="index.html">HOME</a>
+        <a href="movie.html">MOVIE</a>
+        <a href="TVShow.html">TV SHOW</a>
+        <a href="WebSeries.html">WEB SERIES</a>
+        <a href="prices.html">PRICING</a>
       </div>
     </div>
     <div id="sign_in">
@@ -337,6 +339,7 @@
       </div>
     </div>
 
+    <script src="./assets/js/index.js" type="module"></script>
     <script src="./assets/js/global.js" type="module"></script>
   </body>
 </html>
