--- a/src/prices.html
+++ b/src/prices.html
@@ -13,14 +13,16 @@
     <header id="header">
       <div class="container">
         <div class="header_logo">
-          <img src="./assets/icons/logo.svg" alt="" class="logo" />
+          <a href="index.html">
+            <img src="./assets/icons/logo.svg" alt="" class="logo" />
+          </a>
         </div>
         <div class="header_navbar">
-          <a href="#">HOME</a>
-          <a href="#">MOVIE</a>
-          <a href="#">TV SHOW</a>
-          <a href="#">WEB SERIES</a>
-          <a href="#">PRICING</a>
+          <a href="index.html">HOME</a>
+          <a href="movie.html">MOVIE</a>
+          <a href="TVShow.html">TV SHOW</a>
+          <a href="WebSeries.html">WEB SERIES</a>
+          <a href="prices.html">PRICING</a>
         </div>
         <div class="header_actions">
           <div class="header_actions_list">
@@ -167,11 +169,11 @@
         />
       </div>
       <div class="header_navbar_mobile_content">
-        <a href="#">HOME</a>
-        <a href="#">MOVIE</a>
-        <a href="#">TV SHOW</a>
-        <a href="#">WEB SERIES</a>
-        <a href="#">PRICING</a>
+        <a href="index.html">HOME</a>
+        <a href="movie.html">MOVIE</a>
+        <a href="TVShow.html">TV SHOW</a>
+        <a href="WebSeries.html">WEB SERIES</a>
+        <a href="prices.html">PRICING</a>
       </div>
     </div>
     <div id="sign_in">
@@ -188,9 +190,15 @@
         </div>
 
         <div class="sign_in_right">
-          <button class="btn_facebook">Login with Facebook</button>
-          <button class="btn_twitter">Login with Twitter</button>
-          <button class="btn_google">Login with Google+</button>
+          <button class="btn_facebook" id="login_with_facebook">
+            Login with Facebook
+          </button>
+          <button class="btn_twitter" id="login_with_twitter">
+            Login with Twitter
+          </button>
+          <button class="btn_google" id="login_with_google">
+            Login with Google+
+          </button>
         </div>
       </div>
     </div>
@@ -218,9 +226,15 @@
         </div>
 
         <div class="sign_up_right">
-          <button class="btn_facebook">Login with Facebook</button>
-          <button class="btn_twitter">Login with Twitter</button>
-          <button class="btn_google">Login with Google+</button>
+          <button class="btn_facebook" id="signup_with_facebook">
+            Login with Facebook
+          </button>
+          <button class="btn_twitter" id="signup_with_facebook">
+            Login with Twitter
+          </button>
+          <button class="btn_google" id="signup_with_facebook">
+            Login with Google+
+          </button>
         </div>
       </div>
     </div>
