- Add get and add comment to db

--- a/src/movie_detail.html
+++ b/src/movie_detail.html
@@ -137,46 +137,10 @@
       <div class="container">
         <h1 class="comment-title">Comments</h1>
         <input type="text" placeholder="Leave a comment..." class="comment_input">
-        <div class="list-comment">
-          <div class="item-comment">
-            <img src="assets/images/Avatar.png" alt="">
-            <div class="people-comment">
-              <h1 class="people-name">Sarah Adamson</h1>
-              <p class="time-comment">02/06/2022 4:30pm</p>
-              <p class="text-comment">Lorem ipsum dolor sit amet consectetur. Aliquet gravida dolor gravida suscipit in sed risus non. Vestibulum senectus dolor nulla vel turpis sed turpis quam.</p>
-            </div>
-          </div>
-
-          <div class="item-comment">
-            <img src="assets/images/Avatar.png" alt="">
-            <div class="people-comment">
-              <h1 class="people-name">Sarah Adamson</h1>
-              <p class="time-comment">02/06/2022 4:30pm</p>
-              <p class="text-comment">Lorem ipsum dolor sit amet consectetur. Aliquet gravida dolor gravida suscipit in sed risus
-                non. Vestibulum senectus dolor nulla vel turpis sed turpis quam.</p>
-            </div>
-          </div>
-
-          <div class="item-comment">
-            <img src="assets/images/Avatar.png" alt="">
-            <div class="people-comment">
-              <h1 class="people-name">Sarah Adamson</h1>
-              <p class="time-comment">02/06/2022 4:30pm</p>
-              <p class="text-comment">Lorem ipsum dolor sit amet consectetur. Aliquet gravida dolor gravida suscipit in sed risus
-                non. Vestibulum senectus dolor nulla vel turpis sed turpis quam.</p>
-            </div>
-          </div>
-
-          <div class="item-comment">
-            <img src="assets/images/Avatar.png" alt="">
-            <div class="people-comment">
-              <h1 class="people-name">Sarah Adamson</h1>
-              <p class="time-comment">02/06/2022 4:30pm</p>
-              <p class="text-comment">Lorem ipsum dolor sit amet consectetur. Aliquet gravida dolor gravida suscipit in sed risus
-                non. Vestibulum senectus dolor nulla vel turpis sed turpis quam.</p>
-            </div>
-          </div>
+        <div>
+          <button class="btn_outline" id="send_comment">Send</button>
         </div>
+        <div class="list-comment"></div>
       </div>
     </section>
   </main>
